--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,8 @@
   --card-foreground: oklch(0.9 0 0);
   --popover: oklch(0 0 0);
   --popover-foreground: oklch(0.9 0 0);
-  --primary: oklch(0.6 0.25 25); /* Vermelho */
+  --primary: oklch(0.6 0.25 25);/* Vermelho */
+  --secundary: rgba(0, 51, 102, 1)
   --primary-foreground: oklch(0.9 0 0);
   --secondary: oklch(0.1 0 0);
   --secondary-foreground: oklch(0.8 0 0);
@@ -54,7 +55,7 @@
   --accent-foreground: oklch(0.9 0 0);
   --destructive: oklch(0.6 0.25 25);
   --destructive-foreground: oklch(0.9 0 0);
-  --border: oklch(0.6 0.25 25 / 0.3);
+  --border: oklch(0.7 0 0);
   --input: oklch(0.1 0 0);
   --ring: oklch(0.6 0.25 25);
   --chart-1: oklch(0.6 0.25 25);
