--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@
   --border: oklch(0.7 0 0); /* Borda vermelha transparente */
   --input: oklch(0.1 0 0);
   --ring: oklch(0.7 0 0);
-  --chart-1: oklch(0.6 0.25 25);
+  --chart-1: rgba(235, 38, 30, 1);
  
   --radius: 0.625rem;
   --sidebar: oklch(0.05 0 0);
@@ -58,7 +58,7 @@
   --border: oklch(0.7 0 0);
   --input: oklch(0.1 0 0);
   --ring: oklch(0.6 0.25 25);
-  --chart-1: oklch(0.6 0.25 25);
+  --chart-1: rgba(235, 38, 30, 1);
 
   --sidebar: oklch(0.05 0 0);
   --sidebar-foreground: oklch(0.9 0 0);
